--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ mkl==2021.4.0
 mpmath==1.3.0
 nest-asyncio==1.6.0
 networkx==3.3
-numpy==1.25.1
+numpy==1.24.1
 packaging==24.1
 parso==0.8.4
 pexpect==4.9.0
@@ -54,9 +54,10 @@ sympy==1.13.1
 tbb==2021.13.0
 tifffile==2024.7.2
 tk==0.1.0
-torch==2.1.0
+torch==2.4.0+cu124
+torchaudio==2.4.0+cu124
 torchsummary==1.5.1
-torchvision==0.16.0
+torchvision==0.19.0+cu124
 tornado==6.4.1
 traitlets==5.14.3
 typing_extensions==4.12.2
